added welcome screen

--- a/CryptoPortfolio/app/src/main/AndroidManifest.xml
+++ b/CryptoPortfolio/app/src/main/AndroidManifest.xml
@@ -15,18 +15,18 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".activity.SettingsActivity"
+            android:label="@string/title_activity_settings" />
+        <activity android:name=".activity.HelpActivity" />
+        <activity android:name=".activity.AboutActivity" />
+        <activity android:name=".activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activity.SettingsActivity"
-            android:label="@string/title_activity_settings" />
-        <activity android:name=".activity.HelpActivity" />
-        <activity android:name=".activity.AboutActivity"></activity>
     </application>
-
 </manifest>
